codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__tests__vim_flow_tests__vim_input_returned_draft.snap
---
source: tui/src/app_shell/vim_flow_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 80, 16,),)"
---
  Dashboard  ◆ BC             gpt-5-codex ▾   default ▾   default ▾  ● thinking
────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ STATUS  Vim input returned to composer

 ▎ CODEX  The new shell owns the fullscreen surface.



╭──────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  3:19                                                               │
│> Explain this change:                                                        │
│                                                                              │
│  - preserve spacing                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
